# par-sort

./: Cargo.toml  README.md
benchmarks/cpp/: bench.cpp  run.sh
benchmarks/java/: Bench.java  run.sh
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: main.rs
examples/: simple.rs
src/: insertionsort.rs  lib.rs  mergesort.rs  quicksort.rs  samplesort.rs  tests.rs
